--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template_hackathon",
   "version": "0.1.0",
-  "homepage": "https://val0sch.github.io/hackaton1",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
